--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Aftermath2050
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Characters/Maps/SalVinto1.SalVinto1
-GameDefaultMap=/Game/Characters/Maps/SalVinto1.SalVinto1
+EditorStartupMap=/Game/Levels/Game_Level.Game_Level
+GameDefaultMap=/Game/Levels/Game_Level.Game_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
