--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Aftermath2050
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Game_Level.Game_Level
-GameDefaultMap=/Game/Levels/Game_Level.Game_Level
+EditorStartupMap=/Game/Levels/Main_Menu_Level.Main_Menu_Level
+GameDefaultMap=/Game/Levels/Main_Menu_Level.Main_Menu_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
