Added unfinished procedural generator

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Aftermath2050
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Main_Menu_Level.Main_Menu_Level
-GameDefaultMap=/Game/Levels/Main_Menu_Level.Main_Menu_Level
+EditorStartupMap=/Game/Procedural/procedural.procedural
+GameDefaultMap=/Game/Procedural/procedural.procedural
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
