change motion blur

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+
